--- a/multi-kafka-single-zoo.yml
+++ b/multi-kafka-single-zoo.yml
@@ -16,45 +16,57 @@ services:
   kafka1:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka1
-    ports:
-      - "9092:9092"
+    container_name: kafka1
+    depends_on:
+      - zoo1
     environment:
+      KAFKA_BROKER_ID: 1
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_BROKER_ID: 1
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    depends_on:
-      - zoo1
+
 
   kafka2:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka2
-    ports:
-      - "9093:9093"
+    container_name: kafka2
+    depends_on:
+      - zoo1
     environment:
+      KAFKA_BROKER_ID: 2
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka2:19093,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_BROKER_ID: 2
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    depends_on:
-      - zoo1
 
 
   kafka3:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka3
-    ports:
-      - "9094:9094"
+    container_name: kafka3
+    depends_on:
+      - zoo1
     environment:
+      KAFKA_BROKER_ID: 3
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka3:19094,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
-      KAFKA_BROKER_ID: 3
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+
+
+  nginx:
+    image: nginx:latest
+    hostname: nginx
+    container_name: nginx
     depends_on:
-      - zoo1
+      - kafka1
+      - kafka2
+      - kafka3
+    volumes:
+      - ./kafka_nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 9092-9094:9092-9094
