--- a/multi2-kafka-single-zoo.yml
+++ b/multi2-kafka-single-zoo.yml
@@ -17,8 +17,6 @@ services:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka1
     container_name: kafka1
-    ports:
-      - 9092:9092
     depends_on:
       - zoo1
     environment:
@@ -34,8 +32,6 @@ services:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka2
     container_name: kafka2
-    ports:
-      - 9093:9093
     depends_on:
       - zoo1
     environment:
@@ -51,8 +47,6 @@ services:
     image: confluentinc/cp-kafka:6.2.1
     hostname: kafka3
     container_name: kafka3
-    ports:
-      - 9094:9094
     depends_on:
       - zoo1
     environment:
@@ -62,3 +56,17 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
       KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181"
       KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
+
+
+  nginx:
+    image: nginx:latest
+    hostname: nginx
+    container_name: nginx
+    depends_on:
+      - kafka1
+      - kafka2
+      - kafka3
+    volumes:
+      - ./kafka_nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - 9092-9094:9092-9094
